# carsnbids-scraper

./: .gitignore  README.md  main.py  pyproject.toml
src/: download_objects.py  driver_setup.py  logger.py  main.py  scrape_auction.py  scrape_auction_urls.py  sqlite_setup.py  utils.py
v1/: start_ec2.py
